# TestDataGenerator

./: .gitignore  ParquetDuckDB.py  main.py  main_delta.py  parquet_to_delta.py  pyproject.toml  testfile.py  viewPKL.py
config/: Account_Booking.xlsx  Creditcard.xlsx  EBXCurrencies.xlsx
generators/: ERGenerator.py  data_generator.py
utils/: config_parser.py  data_validator.py  helpers.py
