[tool.poetry]
name = "testdatageneration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
altair = "4.2.2"
annotated-types = "0.7.0"
attrs = "25.3.0"
backoff = "2.2.1"
boto3 = "1.40.40"
botocore = "1.40.40"
certifi = "2025.4.26"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
cloudpickle = "3.1.1"
copulas = "0.12.3"
cramjam = "2.10.0"
cryptography = "43.0.3"
ctgan = "0.11.0"
deepecho = "0.7.0"
distro = "1.9.0"
entrypoints = "0.4"
et_xmlfile = "2.0.0"
Faker = "37.8.0"
fastparquet = "2024.11.0"
filelock = "3.19.1"
fsspec = "2025.5.1"
gherkin-official = "29.0.0"
graphviz = "0.21"
greenlet = "3.2.4"
idna = "3.10"
iniconfig = "2.1.0"
Jinja2 = "3.1.6"
jmespath = "1.0.1"
joblib = "1.5.2"
jsonschema = "4.24.0"
jsonschema-specifications = "2025.4.1"
Mako = "1.3.10"
MarkupSafe = "3.0.2"
marshmallow = "3.26.1"
mistune = "3.1.3"
monotonic = "1.6"
mpmath = "1.3.0"
narwhals = "2.6.0"
networkx = "3.5"
numpy = ">=2.1.0"
openpyxl = "3.1.5"
packaging = "25.0"
pandas = ">=2.2.3"
pandasql = "0.7.3"
parse = "1.20.2"
parse_type = "0.6.4"
pip = "24.3.1"
platformdirs = "4.4.0"
plotly = "6.3.0"
pluggy = "1.6.0"
posthog = "3.25.0"
py4j = "0.10.9.7"
pyarrow = "20.0.0"
pycparser = "2.22"
pydantic = "2.11.5"
pydantic_core = "2.33.2"
pyparsing = "3.2.3"
pyspark = "3.5.6"
pytest = "8.3.5"
pytest-bdd = "8.1.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
PyYAML = "6.0.3"
rdt = "1.18.1"
referencing = "0.36.2"
requests = "2.32.3"
rpds-py = "0.25.1"
s3transfer = "0.14.0"
scikit-learn = "1.7.2"
scipy = ">=1.14.1"
sdmetrics = "0.23.0"
sdv = "1.27.0"
setuptools = "80.9.0"
six = "1.17.0"
SQLAlchemy = "2.0.43"
sympy = "1.13.1"
threadpoolctl = "3.6.0"
toolz = "1.0.0"
torch = ">=2.6.0,<2.7.0"
tqdm = "4.67.1"
typing_extensions = "4.13.2"
typing-inspection = "0.4.1"
tzdata = "2025.2"
tzlocal = "5.3.1"
urllib3 = "2.4.0"
deltalake = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
